objects/maps__AdvRouteTemplate__c.object
<CustomObject>
    <description>This object houses specific information related to how Advanced Routes are generated over a set number of days.</description>
    <fields>
        <fullName>maps__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__ActivityDateFieldOnCompletedVisit__c</fullName>
        <description>This is the date field on the visit record used to determine date of activity</description>
        <label>Activity Date Field on Completed Visit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__ActivityDateFieldOnFutureVisit__c</fullName>
        <description>This is the date field on the future visit record used to determine date of activity</description>
        <label>Activity Date Field on Future Visit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__ActivityEndDateFieldOnFutureVisit__c</fullName>
        <description>This is the end date field on the future visit record used to determine date of activity</description>
        <label>Activity End Date Field on Future Visit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__AdvRouteRoutableObject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will look up to the Advanced Route routable object configuration associated with the template</description>
        <label>Maps Advanced Route Routable Object</label>
        <referenceTo>maps__AdvRouteRoutableObject__c</referenceTo>
        <relationshipLabel>Maps Advanced Route Templates</relationshipLabel>
        <relationshipName>AdvRouteTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__AdvRouteTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup to the main Advanced Route template when routing multiple base objects on the same template</description>
        <label>Maps Advanced Route Template</label>
        <referenceTo>maps__AdvRouteTemplate__c</referenceTo>
        <relationshipLabel>Maps Advanced Route Templates</relationshipLabel>
        <relationshipName>AdvRouteTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__BaseFilterFilters__c</fullName>
        <label>Base Filter Filters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__BaseFilterIncludesAllRecords__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This checkbox is used to determine if the template has a base filter or if it should include all records</description>
        <label>Base Filter Includes All Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__BaseFilterLogicOrder__c</fullName>
        <label>Base Filter Logic Order</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__BaseFilterWhereClause__c</fullName>
        <label>Base Filter Where Clause</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__BaseUrl__c</fullName>
        <description>This will determine the orgs base url to be used in email templates</description>
        <formula>LEFT($Api.Partner_Server_URL_370, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_370))</formula>
        <label>Base Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__CompletedTabsPicklist__c</fullName>
        <description>These are the completed tabs for the template</description>
        <label>Completed Tabs Picklist</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PlanInformation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__CompletedTabs__c</fullName>
        <description>This will be an array of numbers.  Each number will correspond to a tab on the template builder.  If a number is missing, it is assumed that that tab has not been completed yet for this template;

Using a text field instead of a multi select picklist, in case we add more tabs later on.  I don&apos;t believe new picklist values will get pushed in a managed package.</description>
        <label>Completed Tabs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__CompletedVisitFilters__c</fullName>
        <description>This is a JSON object containing the visit filter information</description>
        <label>Completed Visit Filters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__CompletedVisitObject__c</fullName>
        <description>This is the object that describes a visit</description>
        <label>Completed Visit Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__CompletedVisitOrderOfOperations__c</fullName>
        <description>This holds the order of operations for the visit logic</description>
        <label>Completed Visit Order of Operations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__CompletedVisitsQuery__c</fullName>
        <description>This is the query to determine an object has been visited</description>
        <label>Completed Visits Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__CoreBaseObjectId__c</fullName>
        <description>This is the core base object associated to the template</description>
        <label>Core Base Object Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__DayToOptimizeOn__c</fullName>
        <description>Thiese are the days of the week optimizations can run on</description>
        <label>Day(s) To Optimize On</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>maps__AdvRouteDaysOfWeek</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__DaysBetweenOptimizationsFactor__c</fullName>
        <label>Days Between Optimizations Factor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__DaysBetweenOptimizations__c</fullName>
        <description>This represents how many days will go before optimizing each user</description>
        <label>Days Between Optimizations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__DaysOfWeekToRouteFor__c</fullName>
        <description>These are the days of the week that the route can calculate for</description>
        <label>Day(s) of Week to Route for</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>maps__AdvRouteDaysOfWeek</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__DaysToInsertUnit__c</fullName>
        <description>This is the days to insert unit</description>
        <label>Days to Insert Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weeks</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__DaysToInsert__c</fullName>
        <description>This is the days to insert</description>
        <label>Days to Insert</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__Description__c</fullName>
        <description>A short description of the template</description>
        <inlineHelpText>A short description of the template
Max Length: 255</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>maps__EndDate__c</fullName>
        <description>The date the template ends on</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>maps__FrequencyStartDate__c</fullName>
        <description>This will be the date that all frequency calculations should start on</description>
        <label>Frequency Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>maps__FrequencyStartsOnTemplateStart__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This determines if our frequency calculation should start when the template starts or should be a rolling frequency</description>
        <inlineHelpText>uncheck this if your performance period does not line up with your template start</inlineHelpText>
        <label>Frequency Starts on Template Start</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__FutureVisitFilters__c</fullName>
        <description>This is a JSON object containing the visit filter information</description>
        <label>Future Visit Filters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__FutureVisitLogicOrderOfOperations__c</fullName>
        <description>This holds the order of operations for the future visit logic</description>
        <label>Future Visit Logic Order of Operations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__FutureVisitObject__c</fullName>
        <description>This is the object that describes a future visit</description>
        <label>Future Visit Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__FutureVisitsQuery__c</fullName>
        <description>This is the query to determine an objects future visits</description>
        <label>Future Visits Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__IsRepeating__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag tells us if a template should continue to be used even after the current end date</description>
        <label>Repeating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__MaxSegmentTravelTime__c</fullName>
        <label>Max Segment Travel Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__MaxTotalDistance__c</fullName>
        <label>Max Total Distance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__MaxWorkingHours__c</fullName>
        <description>This field is used to set a max number of hours a user can configure as their working hours per day</description>
        <label>Max Working Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__NeedsDeleting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is used to flag a template for deletion</description>
        <label>Needs Deleting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__OptimizationSpeedPreference__c</fullName>
        <description>Allows for faster optimization speeds to maintain in-field productivity.</description>
        <label>Optimization Speed Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                    <default>true</default>
                    <label>60</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__PrioritizationStrictness__c</fullName>
        <defaultValue>&apos;4&apos;</defaultValue>
        <description>This tells Maps Advanced Route how strict to account for the priorities during routing.  1 is least strict and 7 is most strict.</description>
        <label>Prioritization Strictness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__RepeatUntilDate__c</fullName>
        <description>This date is the date  a repeating template will stop being used</description>
        <label>Repeat Until Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>maps__RoutableObjectOrderNumber__c</fullName>
        <description>This is the tab number for routable objects on the template when routing multiple base objects</description>
        <label>Routable Object Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__RouteDurationIntervalType__c</fullName>
        <description>This is the route duration interval type</description>
        <label>Route Duration Interval Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weeks</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__RouteDurationInterval__c</fullName>
        <description>This is the route duration interval</description>
        <label>Route Duration Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__RouteDurationType__c</fullName>
        <description>This is the duration type of the route</description>
        <label>Route Duration Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>maps__AdvRouteDurationTypes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__RouteOrderBuffer__c</fullName>
        <label>Route Order Buffer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__RoutesAndScheduleConfig__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will look up to the Maps Routes and Schedule Config setting used for outputs and future visits</description>
        <label>Routes and Schedule Config</label>
        <referenceTo>maps__CalEventBaseObj__c</referenceTo>
        <relationshipLabel>Maps Advanced Route Templates</relationshipLabel>
        <relationshipName>AdvRouteTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__RunAutoOptimization__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Run Auto Reoptimization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__SavedQueryId__c</fullName>
        <description>This will be the id of the related Saved Query record for Maps</description>
        <label>Saved Query Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__SelectedOutputTypes__c</fullName>
        <description>These are the selected output types for the template</description>
        <label>Selected Output Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__SelectedPromoWindows__c</fullName>
        <description>These are the selected promo windows for the template</description>
        <label>Selected Promo Windows</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__StartDate__c</fullName>
        <description>The date the template starts on</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>maps__TemplateObjectFieldOnCompletedVisit__c</fullName>
        <description>This is the field on the visit record that relates the visit to the template object</description>
        <label>Template Object Field on Completed Visit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__TemplateObjectFieldOnFutureVisit__c</fullName>
        <description>This is the field on the future visit record that relates the visit to the template object</description>
        <label>Template Object Field on Future Visit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__TemplateObjectLatitudeField__c</fullName>
        <description>This is the field that holds the latitude on the template object</description>
        <label>Template Object Latitude Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__TemplateObjectLongitudeField__c</fullName>
        <description>This is the longitude field on the template object</description>
        <label>Template Object Longitude Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__TemplateObject__c</fullName>
        <description>This is the object that the template will process</description>
        <label>Template Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__TimeToOptimize__c</fullName>
        <label>Time to Reoptimize</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:15 AM</fullName>
                </value>
                <value>
                    <fullName>12:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:45 AM</fullName>
                </value>
                <value>
                    <fullName>1:00 AM</fullName>
                </value>
                <value>
                    <fullName>1:15 AM</fullName>
                </value>
                <value>
                    <fullName>1:30 AM</fullName>
                </value>
                <value>
                    <fullName>1:45 AM</fullName>
                </value>
                <value>
                    <fullName>2:00 AM</fullName>
                </value>
                <value>
                    <fullName>2:15 AM</fullName>
                </value>
                <value>
                    <fullName>2:30 AM</fullName>
                </value>
                <value>
                    <fullName>2:45 AM</fullName>
                </value>
                <value>
                    <fullName>3:00 AM</fullName>
                </value>
                <value>
                    <fullName>3:15 AM</fullName>
                </value>
                <value>
                    <fullName>3:30 AM</fullName>
                </value>
                <value>
                    <fullName>3:45 AM</fullName>
                </value>
                <value>
                    <fullName>4:00 AM</fullName>
                </value>
                <value>
                    <fullName>4:15 AM</fullName>
                </value>
                <value>
                    <fullName>4:30 AM</fullName>
                </value>
                <value>
                    <fullName>4:45 AM</fullName>
                </value>
                <value>
                    <fullName>5:00 AM</fullName>
                </value>
                <value>
                    <fullName>5:15 AM</fullName>
                </value>
                <value>
                    <fullName>5:30 AM</fullName>
                </value>
                <value>
                    <fullName>5:45 AM</fullName>
                </value>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:15 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:45 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:15 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__TooltipFieldApis__c</fullName>
        <description>This field holds a JSON array of field apis to be used for tooltips</description>
        <label>Tooltip Field Apis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__UserField__c</fullName>
        <description>This is the field that will be compared on the object to determine if that object is owned/maintained by a route template user</description>
        <label>User Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__VisitType__c</fullName>
        <description>This is for determining which visit windows should be used based on visit type</description>
        <label>Visit Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Maps Advanced Route Template</label>
    <nameField>
        <label>Maps Advanced Route Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Advanced Route Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>